--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Yhteinen harjoitustyo</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     <nav></nav>
