EDIT index.html and main.css ADD viewport

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <title>Yhteinen harjoitustyo</title>
     <link rel="stylesheet" href="styles/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <nav></nav>
     
     <header>
+        <marquee>asd</marquee>
         <h1>HEADER</h1>
     </header>
     
