--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav></nav>
     
     <header>
-        <marquee>asd</marquee>
+        <!--<marquee>asd</marquee>-->
         <h1>HEADER</h1>
     </header>
     
